# MusiCV

./: CMakeLists.txt  LICENSE  README.md
.run/: MusiCV.run.xml
